# db_query_optimization

./: .commitlint.config.mjs  .dockerignore  .env.dev  .env.example  .env.prod  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  seed_db.py  server.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-feature_request.yml  02-bug_report.yml  03-tech_debt.yml  config.yml
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  feature.md  refactor.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: b3b0098f789a_initial_schema.py
app/api/: __init__.py
app/api/v1/: __init__.py  (+1 more)
app/db/: __init__.py  db_manager.py  deps.py
app/services/: __init__.py
common/: __init__.py  context_vars.py  logger.py  logging_config.py  structlog_config.py
common/api_error/: ApiError.py  __init__.py  config_error.py
common/config/: __init__.py  app_config.py  config_types.py  env_config.py  initialize_config.py  logging_config.py  structlog_config.py
common/logger/: Log Persistence Backend System - Complete Guide.md  __init__.py  logger.py  persistence.py
common/scripts/: __init__.py  get_date_range.py  get_project_root.py  write_to_file.py
docs/: Architecture.md  database_design.md  db_workflows.md  domain_glossary.md
docs/Manual tests/: Optimzation Tests Results.md  test errors.md
nginx/: Dockerfile
nginx/conf.d/: default.conf
nginx/includes/: proxy_headers.conf
scripts/db/: __init__.py  data_template.py  run_db_seed.py  seed_db.py  seed_large_dataset.py
(+23 files in other folders)
