[project]
name = "db_query_optimization"
version = "0.1.0"
description = "Your project description"
requires-python = ">=3.11"
# Optional: add dependencies here instead of requirements.txt
dependencies = ["fastapi", "uvicorn"]

[tool.setuptools]
py-modules = ["main"]
packages = ["common", "app"]

[tool.ruff.lint]
ignore = ["F403", "F541"]

[tool.ruff.format]
# Ensure it uses double quotes like Black
quote-style = "double"
indent-style = "space"

[[tool.mypy.overrides]]
# Alternatively, keep checking the files but ignore missing library stubs
module = "alembic.*"
ignore_missing_imports = true
